# dumppouch

./: .gitignore  README.md  notes.md  scratch.py  test.py
algoStuff/: branches.py  quicksort.py
misc_code/: go.mod  scratch.go
misc_code/go_stuff/: go.mod  main.go
misc_code/rust/moxy/: Cargo.toml
misc_code/rust/moxy/src/: main.rs
misc_code/rust/projects/guessing_game/src/: main.rs
misc_code/rust/projects/random_number/src/: main.rs
misc_code/rust/projects/tuples/src/: main.rs
misc_code/rust/projects/variables/: notes.md
misc_code/rust/projects/variables/src/: main.rs
python/: arraystuff.py  augmentOperator.py  bulletPointAdder.py  catnames.py  comments.py  eightBall.py  indent.py  mclip.py  multipleAssignments.py  picnicTable.py  scratch.py  supplies.py
python/data/: example.c  pcap_scanner.py
python/python/: SFcrime2018.ipynb  atbs.ipynb  collatz.py  example.c  scratch.py
python_practice/: catnames2.py  cats.py  eightBall.py  leet.py  supplyCheck.py  supplyList.py
python_practice/python/: SFcrime2018.ipynb  pwntools.ipynb  scratch.py
